--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </nav>    
 
-      <!-- Primera seccion -->
+      <!-- Primera seccion inicio -->
 
       <section id="inicio">
           <div class="container">
@@ -67,6 +67,7 @@
                 </h1>
                 <h1 class="divider"></h1>
             
+            
               <div class="row">
                   <div class="col-6">
                        <h5 class="text-justify mt-4 pb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui non velit suscipit iste saepe in debitis consectetur voluptate possimus quibusdam earum odit sed, facilis voluptatem nobis tempore nam quidem aliquam.</h5> 
@@ -79,6 +80,7 @@
           </div>
       </section>
 
+      <!--Seccion de tecnologias utizadas -->
       <section id="tecnologias">
         <div class="container">
             <div class="contenedor mx-5">    
