--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -6,7 +6,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <!--Conexion Css -->
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/css/index.css">
         <!--Font awesome-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Google fonts -->
@@ -21,7 +21,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top p-3">
         <div class="container">
-            <a class="navbar-brand" href="index.html" style="color: #CDA434;">Grafos y Lenguajes Formales</a>
+            <a class="navbar-brand" href="/html/index.html" style="color: #CDA434;">Grafos y Lenguajes Formales</a>
             <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <ion-icon name="menu-outline"></ion-icon>
             </button>
@@ -30,13 +30,13 @@
 
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item px-2">
-                    <a class="nav-link" href="index.html" style="text-align: center;">Inicio </a>
+                    <a class="nav-link" href="/html/index.html" style="text-align: center;">Inicio </a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link" href="nosotros.html" style="text-align: center;">Nosotros </a>
+                        <a class="nav-link" href="/html/nosotros.html" style="text-align: center;">Nosotros </a>
                     </li>
-
-                    <button type="button" class="btn btn-outline-light px-2" style="text-align: center; max-width: 850px;">Ingresa un Grafo</button>
+                    <a href="/html/grafos.html" class="btn btn-outline-light px-2" style="text-align: center; max-width: 850px;">Ingresa un Grafo</a>    
+                    
                 </ul>
             </div>
         </div>
@@ -84,7 +84,7 @@
                 <P>Este sera el grupo de trabajo que estara a cargo del desarrollo de los proyectos a realizar durante el semestre academico
                      del año 2020 de la asignatura <b>Grafos y Lenguajes Formales</b>.
                 </P>
-                <img src="Grafos.png" alt="" height="180px">
+                <img src="/img/Grafos.png" alt="" height="180px">
             </div>
             <div class="col-6 pt-1 pr-5">
                 <p> <i class="fas fa-check-circle"></i> Miguel Martinez</p>
