--- a/html/grafos.html
+++ b/html/grafos.html
@@ -53,11 +53,20 @@
         <h1 class="dividerg mx-5"></h1>
         <div class="row d-flex">
             <div class="container mx-5">
-                <p class="text-center">En esta area podras ingresar grafos con sus distintas caracteristicas, por ejemplo puedes elegir tu tipo de grafo
-                    , ingresar vertices, aristas, para finalmente mediante un analisis, poder obtener: la matriz de adyacencia para tu grafo, entre otras cosas.
-                </p>    
+                <p class="text-center">En esta área podrás ingresar grafos con sus distintas caracteristicas, por ejemplo puedes elegir tu tipo de grafo
+                    , ingresar vertices, aristas, para finalmente mediante un analisis, poder obtener:
+                </p>
+                <div class="row justify-content-center">
+                    <p><i class="fas fa-check-circle"></i> Matriz de adyacencia<br>
+                        <i class="fas fa-check-circle"></i> Matriz de Caminos <br>
+                        <i class="fas fa-check-circle"></i> Grafo Euleriano o Hamiltoniano <br>
+                        <i class="fas fa-check-circle"></i> Camino más rapido
+                    </p>        
+                </div>    
             </div>
         </div>
+        
+        <h1 class="dividerg my-2"></h1>
 
         <div class="container">
             <h3 class="text-center">Instrucciones previas.</h3>
