--- a/html/grafos.html
+++ b/html/grafos.html
@@ -16,6 +16,9 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
+    
+    <link rel="icon" href="/img/Grafos.png">
+    
     <title>Grafos a utilizar</title>
 </head>
 
@@ -49,12 +52,12 @@
 
 <section id="grafos">
     <div class="container border border-dark mt-5 py-2 my-5">
-        <h1 class="mx-5 text-center">Area de Trabajo</h1>
+        <h1 class="mx-5 text-center">Área de Trabajo</h1>
         <h1 class="dividerg mx-5"></h1>
         <div class="row d-flex">
             <div class="container mx-5">
-                <p class="text-center">En esta área podrás ingresar grafos con sus distintas caracteristicas, por ejemplo puedes elegir tu tipo de grafo
-                    , ingresar vertices, aristas, para finalmente mediante un analisis, poder obtener:
+                <p class="text-center">En esta área podrás ingresar grafos con sus distintas características, por ejemplo puedes elegir tu tipo de grafo,
+                    ingresar vértices, aristas, para finalmente mediante un análisis, poder obtener:
                 </p>
                 <div class="row justify-content-center">
                     <p><i class="fas fa-check-circle"></i> Matriz de adyacencia<br>
