--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -11,7 +11,9 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Google fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
-           
+
+        <link rel="icon" href="/img/Grafos.png">
+
     <title>Grafos Nosotros</title>
 
 
@@ -81,7 +83,7 @@
         <br>
         <div class="row">
             <div class="col-6 pl-5">
-                <P>Este sera el grupo de trabajo que estara a cargo del desarrollo de los proyectos a realizar durante el semestre academico
+                <P>Este será el grupo de trabajo que estará a cargo del desarrollo de los proyectos a realizar durante el semestre acádemico
                      del año 2020 de la asignatura <b>Grafos y Lenguajes Formales</b>.
                 </P>
                 <img src="/img/Grafos.png" alt="" height="180px">
