--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -84,16 +84,16 @@
         <div class="row">
             <div class="col-6 pl-5">
                 <P>Este será el grupo de trabajo que estará a cargo del desarrollo de los proyectos a realizar durante el semestre acádemico
-                     del año 2020 de la asignatura <b>Grafos y Lenguajes Formales</b>.
+                     del año 2020 de la asignatura <strong>Grafos y Lenguajes Formales</strong>.
                 </P>
                 <img src="/img/Grafos.png" alt="" height="180px">
             </div>
             <div class="col-6 pt-1 pr-5">
-                <p> <i class="fas fa-check-circle"></i> Miguel Martínez Sánchez.</p>
-                <p><i class="fas fa-check-circle"></i> Esteban Tudela Ortiz.</p>
-                <p><i class="fas fa-check-circle"></i> Diego Salinas Gonzalez.</p>
-                <p> <i class="fas fa-check-circle"></i> Paulo Vera Chacón.</p>
-                <p><i class="fas fa-check-circle"></i> Luis Rivas Sánchez.</p>
+                <p> <em class="fas fa-check-circle"></em> Miguel Martínez Sánchez.</p>
+                <p><em class="fas fa-check-circle"></em> Esteban Tudela Ortiz.</p>
+                <p><em class="fas fa-check-circle"></em> Diego Salinas Gonzalez.</p>
+                <p> <em class="fas fa-check-circle"></em> Paulo Vera Chacón.</p>
+                <p><em class="fas fa-check-circle"></em> Luis Rivas Sánchez.</p>
             </div>
         </div>
     </div>
@@ -107,7 +107,7 @@
                 <div class="row my-1">
                     <div class="col d-flex justify-content-center">
                         <a href="#" class="text-white">
-                            <i class="fab fa-github"></i>  
+                            <em class="fab fa-github"></em>  
                         </a>
                     </div>
                 </div>
