Se desarrollo codigo de matriz de camino y de esconexo

--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
             
               <div class="row">
                   <div class="col-6">
-                       <h5 class="text-justify mt-4 pb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui non velit suscipit iste saepe in debitis consectetur voluptate possimus quibusdam earum odit sed, facilis voluptatem nobis tempore nam quidem aliquam.</h5> 
+                       <h5 class="text-justify mt-4 pb-5 mr-4">A continuación se puede encontrar el desarrollo del trabajo n°1 de la asignatura Grafos y lenguajes formales. En esta aplicación web usted podrá ingresar un grafo (simple, dirigido, etiquetado, etc) y obtener información al respecto, como su matriz de camino, su árbol generador, entre otras opciones.</h5> 
                        <a class="" href="/html/grafos.html">Ingresa un Grafo</a>
                     </div>
                   <div class="col-6 text-center bg-dark mt-4">
@@ -134,8 +134,8 @@
                             </div>
             
                             <div class="carousel__elemento">
-                                <img src="/img/Grafos.png" alt="Otra">
-                                <p>Otra</p>
+                                <img src="/img/github.png" alt="Github">
+                                <p>Github</p>
                             </div>
 
                         </div>
@@ -162,7 +162,7 @@
                 <div class="content-center">
                     <div class="row my-1">
                         <div class="col d-flex justify-content-center">
-                            <a href="#" class="text-white">
+                            <a href="https://github.com/Estebancl7/Proyecto-N-1-Grafos" class="text-white">
                                 <em class="fab fa-github"></em>  
                             </a>
                         </div>
