--- a/html/grafos.html
+++ b/html/grafos.html
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!--Conexion Css -->
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/grafos.css">
     <!--Font awesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@300;500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
 
@@ -21,22 +24,24 @@
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
 
     <link rel="icon" href="/img/Grafos.png">
+    <link rel="icon" href="/img/Grafos.png">
 
 
-
-
-    <title>Grafos a utilizar</title>
+    <title>Grafos | Análisis</title>
 </head>
 
-
 <body>
+    <!--PONER EL BACK EN EL CSS-->
 
+    <!-- HEADER -->
     <!-- Header-->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top p-3">
         <div class="container">
             <a class="navbar-brand" href="/html/index.html" style="color: #CDA434;">Grafos y Lenguajes Formales</a>
-            <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler border-white" type="button" data-toggle="collapse"
+                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <ion-icon name="menu-outline"></ion-icon>
             </button>
 
@@ -58,11 +63,13 @@
 
     <section id="grafos">
         <div class="container border border-dark mt-5 py-2 my-5">
-            <h1 class="mx-5 text-center">Area de Trabajo</h1>
+            <h1 class="mx-5 text-center">Área de Trabajo</h1>
             <h1 class="dividerg mx-5"></h1>
             <div class="row d-flex">
                 <div class="container mx-5">
-                    <p class="text-center">En esta área podrás ingresar grafos con sus distintas caracteristicas, por ejemplo puedes elegir tu tipo de grafo , ingresar vertices, aristas, para finalmente mediante un analisis, poder obtener:
+                    <p class="text-center mt-4">En esta área podrás ingresar grafos con sus distintas caracteristicas, por
+                        ejemplo puedes elegir tu tipo de grafo , ingresar vertices, aristas, para finalmente mediante un
+                        analisis, poder obtener:
                     </p>
                     <div class="row justify-content-center">
                         <p>
@@ -82,17 +89,20 @@
                 <div class="row pt-3 justify-content-center">
                     <div class="col-md-6 mx-5">
                         <p><strong>1.</strong> Elige el tipo de grafo que ingresaras:</p>
-                        <select class="form-control " id="eleccionGrafo">
-                        <option value="Simple">Grafo Simple</option>
-                        <option value="Dirigido">Grafo Dirigido</option>
+                        <select class="form-control " id="tipoGrafo">
+                            <option value="Simple">Grafo Simple</option>
+                            <option value="Dirigido">Grafo Dirigido</option>
                         </select>
 
                     </div>
 
                     <div class="col-md-6">
                         <div class="row d-flex justify-content-center my-2">
-                            <a onclick="draw()" id="btnComenzar" class="btn btn-outline-light px-2" style="text-align: center; max-width: 850px;">Ingresa un Grafo</a>
-                            <select id="locale" style="display: none;"><option value="es">es</option></select>
+                            <a onclick="draw()" id="btnComenzar" class="btn btn-outline-light px-2"
+                                style="text-align: center; max-width: 850px;">Ingresa un Grafo</a>
+                            <select id="locale" style="display: none;">
+                                <option value="es">es</option>
+                            </select>
                         </div>
                     </div>
 
@@ -108,8 +118,8 @@
                             <table style="margin:auto;">
                                 <caption></caption>
                                 <tr>
-                                    <th id="th-id">id</th>
-                                    <td><input id="node-id" class="form-control" placeholder="Ingresa un ID" /></td>
+                                    <th id="th-id"></th>
+                                    <td><input id="node-id" class="form-control mt-1" placeholder="Ingresa un ID" /></td>
                                 </tr>
                                 <tr style="display: none;">
                                     <th id="th-nombre ">Nombre</th>
@@ -117,7 +127,8 @@
                                 </tr>
                             </table>
                             <input type="button" class="btn btn-outline-light" value="Guardar" id="node-saveButton" />
-                            <input type="button" class="btn btn-outline-light" value="Cancelar" id="node-cancelButton" />
+                            <input type="button" class="btn btn-outline-light" value="Cancelar"
+                                id="node-cancelButton" />
                         </div>
 
 
@@ -127,38 +138,96 @@
                             <table style="margin:center;">
                                 <caption></caption>
                                 <tr>
-                                    <td><input type="number" id="edge-label" class="form-control" min="0 " placeholder="Ingresa el peso del grafo " /></td>
+                                    <td><input type="number" id="edge-label" class="form-control" min="0 "
+                                            placeholder="Ingresa el peso del grafo " /></td>
                                 </tr>
                             </table>
 
                             <input type="button" class="btn btn-outline-light" value="Guardar" id="edge-saveButton" />
-                            <input type="button" class="btn btn-outline-light" value="Cancelar" id="edge-cancelButton" />
+                            <input type="button" class="btn btn-outline-light" value="Cancelar"
+                                id="edge-cancelButton" />
                         </div>
                     </div>
 
 
                     <div class="col-md-12">
-                        <h3 class="text-center mt-4">Analisis de resultados</h3>
-                        <h1 class="dividerg"></h1>
+                        <h3 class="text-center mt-5">Analisis de resultados</h3>
+                        <h1 class="dividerg mb-4"></h1>
+                        
                         <div class="row">
-                            <div id="matrizAdy" class="col-4">
+                            <div class="col-4 border border-danger mt-4">
+                                
+                                <div class="col-12 my-2">
+                                    <h3 class="text-center">Matriz de Adyacencia</h3>
+                                    <h1 class="dividerGr"></h1>
+                                    <a onclick="imprimirAD()" class="btn btn-outline-light mt-4 marginbtn">Mostrar Matriz</a>
+                                    <div class="row justify-content-center">
+                                        <div id="matrizAdy" class="pt-4 pb-2"></div>
+                                    </div>
 
-                                <h1>Matriz de Adyacencia</h1>
-                                <a onclick="" class="btn btn-outline-light px-2">Mostrar Matriz</a>
+                                </div>
+                            </div>
+
+                            <div class="col-4 border border-danger mt-4 mx-4">
+                                <div class="col-12 my-2">
+                                    <h3 class="text-center">Matriz de Caminos</h3>
+                                    <h1 class="dividerGr"></h1>
+                                    <a onclick="imprimirCamino()" id="camino" class="btn btn-outline-light mt-4 marginbtn">Haz click para ver!</a>
+                                    <div class="row justify-content-center">
+                                        <div id="matrizCam" class="pt-4 pb-2"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-4 border border-danger mt-4">
+                                <div class="col-12 my-2">
+                                    <h3 class="text-center">¿Saber si es Conexo?</h3>
+                                    <h1 class="dividerGr"></h1>
+                                    <a onclick="imprimirConexo()" class="btn btn-outline-light mt-4 marginbtn">Haz click para ver!</a>
+                                    <div class="row justify-content-center">
+                                        <div id="saberConexo" class="pt-4 pb-2"></div>
+                                    </div>
+                                </div>
 
                             </div>
-                            <div class="col-4">
-                                <h1>Matriz de caminos</h1>
-                                <a href=""></a>
-                            </div>
-                            <div class="col-4">
-                                <h1>Matriz de caminos</h1>
-                            </div>
+                        </div><!--Aca termina el primer raw-->
+                        <div class="row pb-5">
+                            <div class="col-4 border border-danger mt-4">
+                                <div class="col-12 my-2">
+                                    <h3 class="text-center">Matriz de Adyacencia</h3>
+                                    <h1 class="dividerGr"></h1>
+                                    <a onclick="imprimirAD()" class="btn btn-outline-light mt-4 marginbtn">Mostrar Matriz</a>
+                                    <div class="row justify-content-center">
+                                        <div id="matrizAdy" class="pt-4 pb-2"></div>
+                                    </div>
 
+                                </div>
+                            </div>
+                            <div class="col-4 border border-danger mt-4 mx-4">
+                                <div class="col-12 my-2">
+                                    <h3 class="text-center">Matriz de Caminos</h3>
+                                    <h1 class="dividerGr"></h1>
+                                    <a onclick="imprimirAD()" class="btn btn-outline-light mt-4 marginbtn">Haz clic para ver!</a>
+                                    <div class="row justify-content-center">
+                                        <div id="matrizAdy" class="pt-4 pb-2"></div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-4 border border-danger mt-4">
+                                <div class="col-12 my-2">
+                                    <h3 class="text-center">Matriz de Adyacencia</h3>
+                                    <h1 class="dividerGr"></h1>
+                                    <a onclick="imprimirAD()" class="btn btn-outline-light mt-4 marginbtn">Matriz de caminos</a>
+                                    <div class="row justify-content-center">
+                                        <div id="matrizAdy" class="pt-4 pb-2"></div>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
-
-
                     </div>
+
 
                 </div>
 
@@ -179,7 +248,7 @@
                 <div class="content-center">
                     <div class="row my-1">
                         <div class="col d-flex justify-content-center">
-                            <a href="# " class="text-white">
+                            <a href="https://github.com/Estebancl7/Proyecto-N-1-Grafos" class="text-white">
                                 <em class="fab fa-github"></em>
                             </a>
                         </div>
@@ -193,22 +262,23 @@
 
 
 
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <script src="https://kit.fontawesome.com/c8152ea011.js" crossorigin="anonymous"></script>
 
+    <script type="text/javascript" src="/js/grafosDraw.js"></script>
+    <script type="text/javascript" src="/dist/vis.js"></script>
 
 </body>
 
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-<script src="https://kit.fontawesome.com/c8152ea011.js" crossorigin="anonymous"></script>
-
-<script type="text/javascript " src="/js/grafosDraw.js"></script>
-<script type="text/javascript " src="/dist/vis.js"></script>
-
-
 </html>
-</embra
