Modificacion posicional alertas popup

--- a/html/grafos.html
+++ b/html/grafos.html
@@ -110,8 +110,9 @@
 
                     <div class="col-md-6 mx-5" id="">
                         <p><strong>2.</strong>Comienza a ingresar tus grafos:</p>
-                        <div class="col-12 my-2  shadow" id="resultado"></div>
-
+                        
+                        
+                        <div class="col-12 my-2 shadow" id="resultado"></div>
 
                         <div id="node-popUp">
                             <span id="node-operation">Vértices</span>
@@ -130,7 +131,6 @@
                             <input type="button" class="btn btn-outline-light" value="Cancelar"
                                 id="node-cancelButton" />
                         </div>
-
 
                         <div id="edge-popUp">
                             <span id="edge-operation">Aristas</span>
@@ -181,7 +181,7 @@
 
                             <div class="col-4 border border-danger mt-4">
                                 <div class="col-12 my-2">
-                                    <h3 class="text-center">¿Saber si es Conexo?</h3>
+                                    <h3 class="text-center">¿El grafo es <strong>conexo</strong>?</h3>
                                     <h1 class="dividerGr"></h1>
                                     <a onclick="imprimirConexo()" class="btn btn-outline-light mt-4 marginbtn">Haz click para ver!</a>
                                     <div class="row justify-content-center">
