--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Header-->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top p-3">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top p-3 aria-label">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="color: #CDA434;">Grafos y Lenguajes Formales</a>
             <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="col-6">
                         <h5 class="text-justify mt-4 pb-5 mr-4">A continuación se puede encontrar el desarrollo del trabajo N°1 de la asignatura Grafos y lenguajes formales. <br> En esta aplicación web usted podrá ingresar un grafo (simple, dirigido, etiquetado, etc) y obtener información al respecto,
-                            como su matriz de camino, su árbol generador, entre otras opciones.</h5>
+                            como su matriz de camino, su árbol generador, flujo máximo y entre otras opciones.</h5>
                         <a class="" href="grafos.html">Ingresa un Grafo</a>
                     </div>
                     <div class="col-6 text-center bg-dark mt-4">
@@ -160,7 +160,7 @@
     <!--Seccion footer-->
 
     <section id="footer">
-        <nav class="container-fluid  p-2">
+        <nav class="container-fluid  p-2 aria-label">
             <div class="container">
                 <div class="content-center">
                     <div class="row my-1">
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <h1 class="divider mx-5"></h1>
-                    <h4 class="text-center"> Universidad Tecnológica Metropolitana | Desarrollado por: Grupo 5</h4>
+                    <h4 class="text-center"> Universidad Tecnológica Metropolitana | Desarrollado por: Grupo 3</h4>
                 </div>
             </div>
         </nav>
