--- a/nosotros.html
+++ b/nosotros.html
@@ -23,7 +23,7 @@
 <body>
     <!-- Header-->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top p-3">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top p-3 aria-label">
         <div class="container">
             <a class="navbar-brand" href="index.html" style="color: #CDA434;">Grafos y Lenguajes Formales</a>
             <button class="navbar-toggler border-white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -101,7 +101,7 @@
     </section>
 
     <section id="footer">
-        <nav class="container-fluid  fixed-bottom p-2 mt-5">
+        <nav class="container-fluid  fixed-bottom p-2 mt-5 aria-label">
             <div class="container">
                 <div class="content-center">
                     <div class="row my-1">
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <h1 class="divider mx-5"></h1>
-                    <h4 class="text-center"> Universidad Tecnológica Metropolitana | Desarrollado por: Grupo 5</h4>
+                    <h4 class="text-center"> Universidad Tecnológica Metropolitana | Desarrollado por: Grupo 3</h4>
                 </div>
             </div>
         </nav>
